# CxxTemplate

./: CMakeLists.txt  LICENSE  README.md  setup.sh
cxx_template/: CMakeLists.txt  main.cpp
cxx_template/include/: common.hpp  log.hpp  typedefs.hpp
cxx_template/src/: log.cpp
